libecs/tests/Core/Scripting/tests/invalid/property/invalid_property3.pvt
component Test
    pos
    # Statically typed, variable declarations require type specification
